2006-03-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-ps.scm (ps-embed-cff): no Setup section in
	Prolog. No %%EOF after CFF file.

2006-03-08  Joe Neeman  <joeneeman@gmail.com>
	
	* lily/constrained-breaking.cc (get_max_systems): used to return a
	much too big value
	(combine_demerits): use pointers to reduce copying data
	(calc_subproblem): idem
	(get_page_penalty): add page turn penalties
	
2006-03-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/invoking.itely (Invoking lilypond): better
	explanation of -e usage.

	* lily/main.cc (main_with_guile): don't append to
	init_scheme_code_string

	* tex/texinfo.tex (sectionheading, q.v.): don't center @image.

	* Documentation/user/invoking.itely: add note about MacOS X scripts.

	* scripts/convert-ly.py (do_options): don't print help for
	--show-rules rule.

	* tex/texinfo.tex: patch texinfo.tex to leave single quotes in
	@code and @example. Update from texinfo.tex from CVS.

2006-03-08  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/scheme-tutorial.itely: clarifies distances
	measured in staff-spaces.

2006-03-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/slur.cc (outside_slur_callback): only calculate offsets if
	consider[k] is true.

	* scm/output-ps.scm (grob-cause): put numbers to ~$ (Thanks Johannes!)

	* lily/spacing-basic.cc (standard_breakable_column_spacing): also
	consider columns that have originals.  Unifies spacing for mm
	rests around line breaks.

	* lily/multi-measure-rest.cc (set_spacing_rods): read bound-padding.
	(set_text_rods): idem.
	(calculate_spacing_rods): new function: share code between
	set_text_rods and set_spacing_rods.
	(set_text_rods): take extents of bounds into account.  

2006-03-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/basic-notation.itely (Writing music in
	parallel): don't use relative.

2006-03-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/music-functions-init.ly (Module): add shiftDurations
