@@ -1,3 +1,8 @@
+2006-03-08  Johannes Schindelin  <Johannes.Schindelin@gmx.de>
+
+	* lily/audio-column.cc, lily/score-performer.cc: MIDI output now
+	respects the Score.skipTypesetting property.
+	
 2006-03-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* scm/framework-ps.scm (ps-embed-cff): no Setup section in
